REFAC-17: Decouple Prompting for Sponsor Logic